Use libgit2 for all internal git operations